# ecmwf-dissemination

./: .arclint  .gitignore  README.md  ecreceive_start.py  go.mod  main.go  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
contrib/telegraf/: queue_size.py
ecdiss/: setup.py
ecdiss/recvd/: __init__.py  __main__.py  daemon.py
ecdiss/tests/: test.py  test_checkpoint.py  test_dataset.py  test_datasetpublisher.py  test_parse_timestamp.py
ecreceive/: __init__.py  __main__.py  checkpoint.py  dataset.py  exceptions.py  threads.py
ecreceive/tests/: test_checkpoint.py  test_dataset.py  test_datasetpublisher.py  test_parse_timestamp.py
etc/: ecdiss.ini  ecreceive.ini
tests/: conftest.py  test_checkpoint.py  test_dataset.py  test_datasetpublisher.py
tests/fixtures/: BFS11120600111511001  BFS11120600111511001.md5
