[metadata]
name = ecreceive
version = attr: ecreceive.__version__
author = MET Norway
author_email = servicedesk@met.no
description = ECReceive daemon
url = https://github.com/metno/ecmwf-dissemination
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
project_urls =
    Source Code = https://github.com/metno/ecmwf-dissemination

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
scripts = ecreceive_start.py
install_requires = 
    pymms @ git+https://github.com/metno/py-mms@aa85fbfe58b58ffbd705c3fe332aaee06cd4c302
    inotify>=0.2
    mock>=2
    python-dateutil>=2.5
    pyzmq>=22.1

[bdist_wheel]
universal = 0

[flake8]
ignore = E203,E221,E226,E228,E241,E251,E261,E266,E302,E305
max-line-length = 99
